--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "joi": "^18.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
     "prisma": "^6.0.0"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
