--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@prisma/client": "^6.0.0",
+    "@prisma/client": "^5.22.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "joi": "^18.0.2"
+    "joi": "^18.0.2",
+    "jsonwebtoken": "^9.0.3"
   },
   "devDependencies": {
+    "@types/node": "^25.0.2",
     "nodemon": "^3.1.11",
-    "prisma": "^6.0.0"
+    "prisma": "^5.22.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
